2011-05-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnheader.el (nnheader-insert-buffer-substring): Renamed from nntp-
	and moved from that file for reuse.

	* pop3.el (pop3-open-server): Error messages are "-ERR".

2011-05-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* pop3.el (pop3-open-server): Upgrade opportunistically to STARTTLS.
	(open-tls-stream): Remove superfluous tls/starttls autoloads.

2011-05-01  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: No Gnus v0.17 is released.

2011-05-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-sum.el (gnus-summary-next-article): Don't bug out if the summary
	buffer has moved to a different frame.

2011-05-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-article): Use nntp-insert-buffer-substring
	to get the conversion from unibyte to multibyte buffers to work on
	Emacs 22.

	* nntp.el (nntp-request-article): Slight clean-up.

2011-04-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-strike-through): New face.
	(shr-tag-s): Use it to provide <s> support.
	(shr-tag-s): Remove duplicate definition.

2011-04-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-ignore-group-p): Don't call
	`gnus-parameter-registry-ignore' if the *Group* buffer doesn't exist.

2011-04-24  Teodor Zlatanov  <tzz@lifelogs.com>

	* proto-stream.el (proto-stream-open-starttls): Give host parameter to
	`gnutls-negotiate'.
	(gnutls-negotiate): Adjust `gnutls-negotiate' declaration.

2011-04-23  Glenn Morris  <rgm@gnu.org>

	* gnus-sum.el (gnus-extra-headers): Bump :version.

2011-04-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-sup): New function.
	(shr-tag-sub): Ditto.

2011-04-22  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-ignore-group-p): Test specifically
	for the case where `gnus-registry-ignored-groups' is a list of lists,
	and don't call `gnus-parameter-registry-ignore' otherwise.
